# compose-for-agents

.github/workflows/: a2a.yaml  adk-cerebras.yaml  adk.yaml
a2a/: Dockerfile  pyproject.toml
adk/: Dockerfile  pyproject.toml
adk-cerebras/: pyproject.toml
adk-sock-shop/: Dockerfile  pyproject.toml
agno/: compose.yaml
agno/agent-ui/: Dockerfile  package.json  pnpm-lock.yaml
agno/agent-ui/src/components/ui/typography/MarkdownRenderer/: MarkdownRenderer.tsx
langchaingo/: go.mod  go.sum
